--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<script src="stats.js"></script>
 	<script src="fruit.js"></script>
 	<script src="ghost_ai.js"></script>
+	<script src="utils.js"></script>
 	<script src="sketch.js"></script>
 
 	<style>
