arranged tile, dot, power, wall, fruit

--- a/index.html
+++ b/index.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title>pacman</title>
-	<script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
-	<script src="tile.js"></script>
-	<script src="pacman.js"></script>
-	<script src="dot.js"></script>
-	<script src="power.js"></script>
-	<script src="ghost.js"></script>
-	<script src="wall.js"></script>
-	<script src="settings.js"></script>
-	<script src="level.js"></script>
-	<script src="stats.js"></script>
-	<script src="fruit.js"></script>
-	<script src="ghost_ai.js"></script>
-	<script src="utils.js"></script>
-	<script src="sketch.js"></script>
+    <title>pacman</title>
+    <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
+    <script src="tile.js"></script>
+    <script src="pacman.js"></script>
+    <script src="dot.js"></script>
+    <script src="power.js"></script>
+    <script src="ghost.js"></script>
+    <script src="wall.js"></script>
+    <script src="settings.js"></script>
+    <script src="level.js"></script>
+    <script src="stats.js"></script>
+    <script src="fruit.js"></script>
+    <script src="ghost_ai.js"></script>
+    <script src="utils.js"></script>
+    <script src="sketch.js"></script>
 
-	<style>
-		body {
-			margin:0;
-			padding:0;
-			overflow: hidden;
-		}
-		canvas {
-			margin:auto;
-		}
-	</style>
-</head>
-<body>
-</body>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
+      canvas {
+        margin: auto;
+      }
+    </style>
+  </head>
+  <body></body>
 </html>
