--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>pacman</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
     <script src="tile.js"></script>
+    <script src="entity.js"></script>
     <script src="pacman.js"></script>
     <script src="dot.js"></script>
     <script src="power.js"></script>
